WebShop.API/src/main/java/com/example/webshopapi/error/exception/UserNotFoundException.java
package com.example.webshopapi.error.exception;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}